--- a/Source/SCIT1thProject/src/View/RootLayout.fxml
+++ b/Source/SCIT1thProject/src/View/RootLayout.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
 
+<AnchorPane prefHeight="326.0" prefWidth="467.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="View.Controller.RootLayoutController">
+   <children>
+      <Button fx:id="button" layoutX="206.0" layoutY="131.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="55.0" text="Button" />
+   </children>
+</AnchorPane>
