--- a/Source/SCIT1thProject/src/View/FindAddress.fxml
+++ b/Source/SCIT1thProject/src/View/FindAddress.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.FindAddressController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.FindAddressController">
    <children>
       <SplitPane dividerPositions="0.2889447236180904" layoutX="120.0" layoutY="66.0" orientation="VERTICAL" prefHeight="600.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -34,6 +40,7 @@
                   <Label layoutX="14.0" layoutY="43.0" prefHeight="15.0" prefWidth="64.0" text="현주소" />
                   <Button fx:id="Chk_address_btn" layoutX="469.0" layoutY="39.0" mnemonicParsing="false" onAction="#Click_find_add" prefHeight="23.0" prefWidth="96.0" text="주소검색" />
                   <Button fx:id="Input_add_btn" layoutX="469.0" layoutY="73.0" mnemonicParsing="false" onAction="#addressInput" prefHeight="23.0" prefWidth="96.0" text="주소입력" />
+                  <Label fx:id="resultLabel" layoutX="87.0" layoutY="73.0" prefHeight="23.0" prefWidth="371.0" />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="461.0" prefWidth="398.0">
                <children>
