--- a/Source/SCIT1thProject/bin/View/MakeMember.fxml
+++ b/Source/SCIT1thProject/bin/View/MakeMember.fxml
@@ -43,29 +43,29 @@
 		<Separator layoutX="320.0" layoutY="175.0" orientation="VERTICAL" prefHeight="164.0" prefWidth="7.0" />
 		<CheckBox fx:id="Chk_true_agree" layoutX="545.0" layoutY="151.0" mnemonicParsing="false" text="예" />
 		<Label layoutX="378.0" layoutY="152.0" text="위 약관에 동의하는 바입니다." />
-		<Label layoutX="9.0" layoutY="213.0" text="*비밀번호" />
-		<Label layoutX="9.0" layoutY="253.0" text="*비밀번호 확인" />
-		<Label layoutX="12.0" layoutY="332.0" text="*주소" />
+		<Label layoutX="9.0" layoutY="215.0" text="*비밀번호" />
+		<Label layoutX="9.0" layoutY="250.0" text="*비밀번호 확인" />
+		<Label layoutX="9.0" layoutY="320.0" text="*주소" />
 		<Label layoutX="340.0" layoutY="225.0" text="성별" />
 		<Label layoutX="340.0" layoutY="265.0" text="이메일" />
 		<Label layoutX="340.0" layoutY="306.0" text="연락처" />
 		<Label layoutX="9.0" layoutY="175.0" prefHeight="25.0" prefWidth="65.0" text="*ID" />
-		<Button fx:id="Input_Member" layoutX="300.0" layoutY="350.0" mnemonicParsing="false" onAction="#operand" prefHeight="23.0" prefWidth="104.0" text="회원가입 하기" />
-		<Button fx:id="Return_Menu" layoutX="420.0" layoutY="350.0" mnemonicParsing="false" onAction="#returnMenu" text="메뉴로 돌아가기" />
-		<TextField fx:id="Input_ID" layoutX="100.0" layoutY="175.0" prefHeight="23.0" prefWidth="113.0" />
-		<TextField fx:id="postNum" layoutX="97.0" layoutY="291.0" prefHeight="23.0" prefWidth="113.0" />
+		<TextField fx:id="Input_ID" layoutX="100.0" layoutY="175.0" prefHeight="20.0" prefWidth="110.0" />
+		<Button fx:id="Chk_ID" layoutX="220.0" layoutY="175.0" mnemonicParsing="false" onAction="#ChkrepeatID" text="ID중복확인" />
+      <PasswordField fx:id="Input_Pass" layoutX="100.0" layoutY="210.0" prefHeight="20.0" prefWidth="110.0" />
+      <PasswordField fx:id="Chk_password" layoutX="100.0" layoutY="245.0" prefHeight="20.0" prefWidth="110.0" />
+		<TextField fx:id="postNum" editable="false" layoutX="100.0" layoutY="280.0" prefHeight="23.0" prefWidth="113.0" />
+      <Button fx:id="Chk_address" layoutX="220.0" layoutY="280.0" mnemonicParsing="false" onAction="#Open_add_page" prefHeight="23.0" prefWidth="93.0" text="우편번호 검색" />
+      <TextField fx:id="address" editable="false" layoutX="100.0" layoutY="315.0" prefHeight="23.0" prefWidth="179.0" />
+      <TextField fx:id="detailAddress" layoutX="100.0" layoutY="345.0" prefHeight="23.0" prefWidth="179.0" />
+      <TextField fx:id="Input_name" layoutX="392.0" layoutY="177.0" prefHeight="23.0" prefWidth="150.0" />
 		<ComboBox fx:id="Chk_Gender" layoutX="392.0" layoutY="221.0" prefWidth="150.0" />
 		<TextField fx:id="Input_Email" layoutX="392.0" layoutY="261.0" prefHeight="23.0" prefWidth="150.0" />
 		<TextField fx:id="Input_Phone" layoutX="392.0" layoutY="302.0" prefHeight="23.0" prefWidth="150.0" />
-		<Button fx:id="Chk_ID" layoutX="220.0" layoutY="175.0" mnemonicParsing="false" onAction="#ChkrepeatID" text="ID중복확인" />
-      <Button fx:id="Chk_address" layoutX="217.0" layoutY="291.0" mnemonicParsing="false" onAction="#Open_add_page" prefHeight="23.0" prefWidth="93.0" text="우편번호 검색" />
       <Label layoutX="341.0" layoutY="181.0" text="이름" />
-      <TextField fx:id="Input_name" layoutX="392.0" layoutY="177.0" prefHeight="23.0" prefWidth="150.0" />
-      <Label layoutX="9.0" layoutY="295.0" text="*우편번호" />
-      <TextField fx:id="address" layoutX="100.0" layoutY="328.0" prefHeight="23.0" prefWidth="179.0" />
-      <TextField fx:id="detailAddress" layoutX="100.0" layoutY="361.0" prefHeight="23.0" prefWidth="179.0" />
-      <Label layoutX="15.0" layoutY="366.0" text="*상세주소" />
-      <PasswordField fx:id="Input_Pass" layoutX="100.0" layoutY="209.0" prefHeight="25.0" prefWidth="113.0" />
-      <PasswordField fx:id="Chk_password" layoutX="100.0" layoutY="249.0" prefHeight="25.0" prefWidth="104.0" />
+      <Label layoutX="9.0" layoutY="285.0" text="*우편번호" />
+      <Label layoutX="9.0" layoutY="350.0" text="*상세주소" />
+		<Button fx:id="Input_Member" layoutX="340.0" layoutY="350.0" mnemonicParsing="false" onAction="#operand" prefHeight="23.0" prefWidth="104.0" text="회원가입 하기" />
+		<Button fx:id="Return_Menu" layoutX="460.0" layoutY="350.0" mnemonicParsing="false" onAction="#returnMenu" text="메뉴로 돌아가기" />
 	</children>
 </AnchorPane>
