--- a/Source/SCIT1thProject/src/View/Home.fxml
+++ b/Source/SCIT1thProject/src/View/Home.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -28,13 +29,18 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Button fx:id="logIn" layoutX="14.0" layoutY="286.0" mnemonicParsing="false" onAction="#btnLogInAction" prefHeight="100.0" prefWidth="150.0" text="LOG IN" />
-      <Button fx:id="signIn" layoutX="230.0" layoutY="286.0" mnemonicParsing="false" onAction="#btnSignInAction" prefHeight="100.0" prefWidth="150.0" text="SIGN IN" />
-      <Button fx:id="exit" layoutX="446.0" layoutY="286.0" mnemonicParsing="false" onAction="#btnExitAction" prefHeight="100.0" prefWidth="150.0" text="EXIT" />
-      <Label fx:id="lId" layoutX="14.0" layoutY="229.0" text="ID :" />
-      <Label fx:id="lPassword" layoutX="265.0" layoutY="229.0" text="PASSWORD :" />
-      <TextField fx:id="tfId" layoutX="45.0" layoutY="223.0" promptText="ID 입력" />
-      <PasswordField fx:id="pfPw" layoutX="375.0" layoutY="223.0" promptText="PASSWORD 입력" />
-      <Label fx:id="lblMessage" alignment="CENTER" layoutX="135.0" layoutY="155.0" prefHeight="33.0" prefWidth="341.0" text="" />
+      <Button fx:id="logIn" layoutX="420.0" layoutY="170.0" mnemonicParsing="false" onAction="#btnLogInAction" prefHeight="30.0" prefWidth="150.0" text="LOG IN" />
+      <Button fx:id="signIn" layoutX="420.0" layoutY="220.0" mnemonicParsing="false" onAction="#btnSignInAction" prefHeight="30.0" prefWidth="150.0" text="SIGN IN" />
+      <Button fx:id="exit" layoutX="420.0" layoutY="270.0" mnemonicParsing="false" onAction="#btnExitAction" prefHeight="30.0" prefWidth="150.0" text="EXIT" />
+      <Label fx:id="lId" layoutX="410.0" layoutY="80.0" text="ID :" />
+      <Label fx:id="lPassword" layoutX="360.0" layoutY="125.0" text="PASSWORD :" />
+      <TextField fx:id="tfId" layoutX="450.0" layoutY="70.0" prefHeight="30.0" prefWidth="120.0" promptText="ID 입력" />
+      <PasswordField fx:id="pfPw" layoutX="450.0" layoutY="120.0" prefHeight="30.0" prefWidth="120.0" promptText="PASSWORD 입력" />
+      <Label fx:id="lblMessage" alignment="CENTER" layoutX="363.0" layoutY="312.0" prefHeight="62.0" prefWidth="221.0" text="" textFill="#e80606" />
+      <ImageView fx:id="InsertImage" fitHeight="300.0" fitWidth="400.0" layoutX="32.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+      <Image url="Image/kechiman.PNG" />
+      </image>
+      </ImageView>
    </children>
 </AnchorPane>
