--- a/Source/SCIT1thProject/bin/View/Calendar.fxml
+++ b/Source/SCIT1thProject/bin/View/Calendar.fxml
@@ -1,8 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="426.0" prefWidth="612.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
+   <children>
+      <GridPane fx:id="gridPane" layoutX="6.0" layoutY="46.0" prefHeight="366.0" prefWidth="600.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="55.66667175292969" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="122.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label alignment="CENTER" prefHeight="48.0" prefWidth="124.0" styleClass="days" stylesheets="@CalendarStyle.css" text="월" GridPane.columnIndex="1">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" prefHeight="101.0" prefWidth="85.0" styleClass="sunday" stylesheets="@CalendarStyle.css" text="일">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label alignment="CENTER" prefHeight="50.0" prefWidth="86.0" styleClass="days" stylesheets="@CalendarStyle.css" text="화" GridPane.columnIndex="2">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label alignment="CENTER" prefHeight="53.0" prefWidth="110.0" styleClass="days" stylesheets="@CalendarStyle.css" text="수" GridPane.columnIndex="3">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label alignment="CENTER" prefHeight="27.0" prefWidth="91.0" styleClass="days" stylesheets="@CalendarStyle.css" text="목" GridPane.columnIndex="4">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label alignment="CENTER" prefHeight="96.0" prefWidth="127.0" styleClass="days" stylesheets="@CalendarStyle.css" text="금" GridPane.columnIndex="5">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label alignment="CENTER" prefHeight="80.0" prefWidth="86.0" styleClass="saturday" stylesheets="@CalendarStyle.css" text="토" GridPane.columnIndex="6">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+         </children>
+         <padding>
+            <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
+         </padding>
+      </GridPane>
+   </children>
+</AnchorPane>
