회원정보 수정창추가
기능구현은 아직

--- a/Source/SCIT1thProject/src/View/CorrectMember.fxml
+++ b/Source/SCIT1thProject/src/View/CorrectMember.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="CorrectMember" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="CorrectMember" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CorrectMemController">
    <children>
       <MenuBar prefHeight="25.0" prefWidth="300.0">
         <menus>
@@ -32,13 +32,13 @@
       <TextField fx:id="reName" layoutX="129.0" layoutY="37.0" />
       <TextField fx:id="rePassword" layoutX="129.0" layoutY="78.0" />
       <TextField fx:id="rePassChk" layoutX="129.0" layoutY="115.0" />
-      <TextField fx:id="PostalNum" layoutX="129.0" layoutY="155.0" />
-      <TextField layoutX="129.0" layoutY="216.0" />
-      <TextField layoutX="129.0" layoutY="254.0" />
-      <TextField layoutX="129.0" layoutY="292.0" />
-      <TextField layoutX="129.0" layoutY="333.0" />
-      <Button layoutX="214.0" layoutY="184.0" mnemonicParsing="false" text="주소검색" />
-      <Button layoutX="21.0" layoutY="378.0" mnemonicParsing="false" text="회원정보 수정하기" />
-      <Button layoutX="150.0" layoutY="378.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="129.0" text="취소하기" />
+      <TextField fx:id="re_postnum" layoutX="129.0" layoutY="155.0" />
+      <TextField fx:id="re_add" layoutX="129.0" layoutY="216.0" />
+      <TextField fx:id="re_detailadd" layoutX="129.0" layoutY="254.0" />
+      <TextField fx:id="re_email" layoutX="129.0" layoutY="292.0" />
+      <TextField fx:id="re_phone" layoutX="129.0" layoutY="333.0" />
+      <Button layoutX="214.0" layoutY="184.0" mnemonicParsing="false" onAction="#research_add" text="주소검색" />
+      <Button layoutX="21.0" layoutY="378.0" mnemonicParsing="false" onAction="#recorrectMem" text="회원정보 수정하기" />
+      <Button layoutX="150.0" layoutY="378.0" mnemonicParsing="false" onAction="#returnCalendar" prefHeight="25.0" prefWidth="129.0" text="취소하기" />
    </children>
 </AnchorPane>
