--- a/Source/SCIT1thProject/src/View/CorrectMember.fxml
+++ b/Source/SCIT1thProject/src/View/CorrectMember.fxml
@@ -30,10 +30,10 @@
       <Label layoutX="27.0" layoutY="296.0" text="이메일" />
       <Label layoutX="25.0" layoutY="337.0" text="연락처" />
       <TextField fx:id="reName" layoutX="129.0" layoutY="37.0" />
-      <TextField fx:id="rePassword" layoutX="129.0" layoutY="78.0" />
-      <TextField fx:id="rePassChk" layoutX="129.0" layoutY="115.0" />
-      <TextField fx:id="re_postnum" layoutX="129.0" layoutY="155.0" />
-      <TextField fx:id="re_add" layoutX="129.0" layoutY="216.0" />
+      <PasswordField fx:id="rePassword" layoutX="129.0" layoutY="78.0" />
+      <PasswordField fx:id="rePassChk" layoutX="129.0" layoutY="115.0" />
+      <TextField fx:id="re_postnum" editable="false" layoutX="129.0" layoutY="155.0" />
+      <TextField fx:id="re_add" editable="false" layoutX="129.0" layoutY="216.0" />
       <TextField fx:id="re_detailadd" layoutX="129.0" layoutY="254.0" />
       <TextField fx:id="re_email" layoutX="129.0" layoutY="292.0" />
       <TextField fx:id="re_phone" layoutX="129.0" layoutY="333.0" />
