--- a/Source/SCIT1thProject/src/View/Calendar.fxml
+++ b/Source/SCIT1thProject/src/View/Calendar.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +17,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
+<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
    <children>
       <GridPane fx:id="gridPane" gridLinesVisible="true" layoutX="6.0" layoutY="40.0" prefHeight="550.0" prefWidth="870.0" style="-fx-background-color: white; -fx-border-color: black;">
         <columnConstraints>
@@ -460,12 +465,7 @@
           <Menu mnemonicParsing="false" text="회원">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#btnMemCorrect" text="회원정보 수정" />
-                  <Menu mnemonicParsing="false" text="가계부">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="가계부 설정" />
-                        <MenuItem mnemonicParsing="false" onAction="#btnHhManage" text="가계부 관리" />
-                    </items>
-                  </Menu>
+                  <MenuItem mnemonicParsing="false" onAction="#btnHhManage" text="가계부 설정" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="도움말">
