달력리스트수정
수정

--- a/Source/SCIT1thProject/bin/View/Calendar.fxml
+++ b/Source/SCIT1thProject/bin/View/Calendar.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +18,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
+<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
    <children>
       <GridPane fx:id="gridPane" gridLinesVisible="true" layoutY="25.0" prefHeight="625.0" prefWidth="875.0" style="-fx-background-color: white; -fx-border-color: black;">
         <columnConstraints>
@@ -66,12 +71,12 @@
                </font></Label>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                   <Label fx:id="day1" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="30.0" textAlignment="CENTER" textFill="RED">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <ListView layoutY="29.0" prefHeight="70.0" prefWidth="125.0" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -81,7 +86,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <ListView layoutY="31.0" prefHeight="70.0" prefWidth="125.0" />
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -91,17 +96,17 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <ListView layoutY="31.0" prefHeight="70.0" prefWidth="125.0" />
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <children>
-                  <Label fx:id="day4" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="30.0" textAlignment="CENTER">
+                  <Label fx:id="day4" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="1.0" prefHeight="32.0" prefWidth="33.0" textAlignment="CENTER" AnchorPane.bottomAnchor="64.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="92.0" AnchorPane.topAnchor="0.0">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <ListView layoutY="31.0" prefHeight="70.0" prefWidth="125.0" />
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
@@ -111,6 +116,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="1">
@@ -120,6 +126,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="1">
@@ -129,6 +136,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
@@ -138,6 +146,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -147,6 +156,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
@@ -156,6 +166,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
@@ -165,6 +176,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="2">
@@ -174,6 +186,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="2">
@@ -183,6 +196,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="2">
@@ -192,6 +206,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
@@ -201,6 +216,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
@@ -210,6 +226,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
@@ -219,6 +236,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -228,6 +246,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
@@ -237,6 +256,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
@@ -246,6 +266,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
@@ -255,6 +276,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
@@ -264,6 +286,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="5">
@@ -273,6 +296,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
@@ -282,6 +306,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
@@ -291,6 +316,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="5">
@@ -300,6 +326,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="3">
@@ -309,6 +336,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="4">
@@ -318,6 +346,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="5">
@@ -327,6 +356,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="3">
@@ -336,6 +366,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="4">
@@ -345,6 +376,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="5">
@@ -354,6 +386,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="3">
@@ -363,6 +396,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="4">
@@ -372,6 +406,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="5">
@@ -381,6 +416,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="112.0" prefWidth="125.0" GridPane.rowIndex="6">
@@ -390,6 +426,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
@@ -399,6 +436,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="6">
@@ -408,6 +446,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="6">
@@ -417,6 +456,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="6">
@@ -426,6 +466,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="6">
@@ -435,6 +476,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="6">
@@ -444,6 +486,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
+                  <ListView layoutY="30.0" prefHeight="68.0" prefWidth="125.0" style="-fx-padding: 0; -fx-background-insets: 0;" />
                </children>
             </AnchorPane>
          </children>
