콤보박스 임시수정
11

--- a/Source/SCIT1thProject/src/View/HouseHold.fxml
+++ b/Source/SCIT1thProject/src/View/HouseHold.fxml
@@ -17,7 +17,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
 <AnchorPane prefHeight="679.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.HouseHoldController">
    <children>
       <DatePicker fx:id="FromDate" layoutX="528.0" layoutY="67.0" prefHeight="30.0" prefWidth="170.0" />
@@ -57,6 +56,7 @@
             <Label layoutX="213.0" layoutY="534.0" text="원" />
             <Label layoutX="213.0" layoutY="574.0" text="원" />
             <Label layoutX="213.0" layoutY="613.0" text="원" />
+            <ComboBox fx:id="searchCombo" layoutX="18.0" layoutY="66.0" prefHeight="33.0" prefWidth="268.0" />
          </children>
       </AnchorPane>
       <Label layoutX="707.0" layoutY="75.0" text="~" />
